--- a/OpenMetadata/01.QuickStart.md
+++ b/OpenMetadata/01.QuickStart.md
@@ -205,3 +205,8 @@ These sample data is a dimensional model for an e-commerce website called `Shopi
 
 Once the DAG is run, you can run the `lineage_tutorial_operator` DAG, which will fetch lineage metadata for 
 that dimensional model into OpenMetadata.
+
+
+## Some Bugs
+
+The version 
