--- a/OpenMetadata/04.Explore_rest_API.md
+++ b/OpenMetadata/04.Explore_rest_API.md
@@ -6,3 +6,28 @@ REkqVfwFDD-d24HlNEbrqioLsBuFRiwIWKc1m_ZlVQbG7P36RUxhuv2vbSp80FKyNM-Tj93FDzq91jsy
 KMgW2PbXlhVKwEuXUHyakLLzewm9UMeQaEiRzhiTMU3UkLXcKbYEJJvfNFcLwSl9W8JCO_l0Yj3ud-qt_nQYEZwqW6u5nfdQllN133iikV4fM5QZsMCnm8 \
 Rq1mvLR0y9bmJiD7fwM1tmJ791TUWqmKaTnP49U493VanKpUAfzIiOiIbhg" -X GET http://10.50.5.76:8585/api/v1/metadata/types/name/table
 ```
+
+
+```python
+
+import requests
+
+url = 'https://your-openmetadata-instance.com/api/v1/auth/changePassword'
+
+headers = {
+    'Content-Type': 'application/json',
+    'Authorization': 'Bearer <your_access_token>'
+}
+
+payload = {
+    'oldPassword': 'current_password',
+    'newPassword': 'new_password'
+}
+
+response = requests.post(url, headers=headers, json=payload)
+
+if response.status_code == 200:
+    print('Password changed successfully!')
+else:
+    print('Failed to change password. Error:', response.json()['message'])
+```
