--- a/OpenMetadata/Deplyement/bare_metal/01.Installation.md
+++ b/OpenMetadata/Deplyement/bare_metal/01.Installation.md
@@ -177,16 +177,45 @@ The Debian package also has a system configuration file (`/etc/default/elasticse
                       in high network traffic and reducing the response times of your cluster.
 
 
-### 3.1 Trouble shoot duplicate entries for el repo
+### 3.4 Trouble shoot duplicate entries for el repo
 
 If you have the following error: `Duplicate sources.list entry https://artifacts.elastic.co/packages/8.x/apt/ ...`. You
 need to examine `/etc/apt/sources.list.d/elasticsearch-8.x.list` for the duplicate entry or locate the duplicate 
 entry amongst the files in `/etc/apt/sources.list.d/` and the `/etc/apt/sources.list` file.
 
-### 3.2 Start el with security enabled
+### 3.5 Start el with security enabled
 
 When installing Elasticsearch, security features are enabled and configured by default. When you install Elasticsearch, 
 the following security configuration occurs automatically:
 
 - Authentication and authorization are enabled, and a password is generated for the elastic built-in superuser.
 - Certificates and keys for TLS are generated for the transport and HTTP layer, and TLS is enabled and configured with these keys and certificates.
+
+## 4. Install airflow
+
+Airflow has many dependencies, if we don't know which version of the installed dependencies use. The installation
+is not reproducible. In order to have a reproducible installation, we need a constraint file which stores all the `dependencies and their version`
+of the current installation.
+
+You can find examples of the constraint files from the official doc. For example:
+python3.8: https://raw.githubusercontent.com/apache/airflow/constraints-2.9.2/constraints-3.8.txt
+python3.11: https://raw.githubusercontent.com/apache/airflow/constraints-2.9.2/constraints-3.11.txt
+
+```shell
+# if your server has internet, you can use the below command
+# you need to use the right contraint file which correspond your server python version
+pip install "apache-airflow[celery]==2.9.2" --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-2.9.2/constraints-3.8.txt"
+```
+
+We can write a shell script to
+
+```shell
+export AIRFLOW_HOME=/opt/airflow
+AIRFLOW_VERSION=2.9.2
+PYTHON_VERSION="$(python -c 'import sys; print(f"{sys.version_info.major}.{sys.version_info.minor}")')"
+# auto determine the constraint url
+CONSTRAINT_URL="https://raw.githubusercontent.com/apache/airflow/constraints-${AIRFLOW_VERSION}/constraints-${PYTHON_VERSION}.txt"
+
+# For example: https://raw.githubusercontent.com/apache/airflow/constraints-2.9.2/constraints-no-providers-3.8.txt
+pip install "apache-airflow==${AIRFLOW_VERSION}" --constraint "${CONSTRAINT_URL}"
+```
