--- a/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
+++ b/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
@@ -183,7 +183,7 @@ If you have the following error: `Duplicate sources.list entry https://artifacts
 need to examine `/etc/apt/sources.list.d/elasticsearch-8.x.list` for the duplicate entry or locate the duplicate 
 entry amongst the files in `/etc/apt/sources.list.d/` and the `/etc/apt/sources.list` file.
 
-### 3.5 Start el with security enabled
+### 3.5 Work with el default security
 
 When installing Elasticsearch, security features are enabled and configured by default. When you install Elasticsearch, 
 the following security configuration occurs automatically:
@@ -191,31 +191,43 @@ the following security configuration occurs automatically:
 - Authentication and authorization are enabled, and a password is generated for the elastic built-in superuser.
 - Certificates and keys for TLS are generated for the transport and HTTP layer, and TLS is enabled and configured with these keys and certificates.
 
+You can find three import files in `/etc/elasticsearch/certs`
+- **http_ca.crt**: The CA certificate that is used to sign the certificates for the HTTP layer of this Elasticsearch cluster.
+- **http.p12**: Keystore that contains the key and certificate for the HTTP layer for this node.
+- **transport.p12**: Keystore that contains the key and certificate for the transport layer for all the nodes in your cluster.
+
+> The keystore is password protected, you can use the below command to get the password
+> 
+```shell
+
+# Use the following command to retrieve the password for http.p12:
+sudo /usr/share/elasticsearch/bin/elasticsearch-keystore show xpack.security.http.ssl.keystore.secure_password
+
+# Use the following command to retrieve the password for transport.p12
+sudo /usr/share/elasticsearch/bin/elasticsearch-keystore show xpack.security.transport.ssl.keystore.secure_password
+```
+### 3.6 Disable ssl/tls
+
+For test, you may need to disable the ssl/tls. 
+
+In **/etc/elasticsearch/elasticsearch.yml**, you can find all config of the elasticsearch
+
+```shell
+# Find the following lines related to SSL/TLS configuration:
+xpack.security.transport.ssl.enabled: true
+xpack.security.http.ssl.enabled: true
+
+# Change the values from `true` to `false`:
+xpack.security.transport.ssl.enabled: false
+xpack.security.http.ssl.enabled: false
+
+# Then restart the service
+sudo systemctl restart elasticsearch
+
+# test it with http
+curl -u elastic:$ELASTIC_PASSWORD http://localhost:9200 
+```
+
 ## 4. Install airflow
 
-Airflow has many dependencies, if we don't know which version of the installed dependencies use. The installation
-is not reproducible. In order to have a reproducible installation, we need a constraint file which stores all the `dependencies and their version`
-of the current installation.
-
-You can find examples of the constraint files from the official doc. For example:
-python3.8: https://raw.githubusercontent.com/apache/airflow/constraints-2.9.2/constraints-3.8.txt
-python3.11: https://raw.githubusercontent.com/apache/airflow/constraints-2.9.2/constraints-3.11.txt
-
-```shell
-# if your server has internet, you can use the below command
-# you need to use the right contraint file which correspond your server python version
-pip install "apache-airflow[celery]==2.9.2" --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-2.9.2/constraints-3.8.txt"
-```
-
-We can write a shell script to
-
-```shell
-export AIRFLOW_HOME=/opt/airflow
-AIRFLOW_VERSION=2.9.2
-PYTHON_VERSION="$(python -c 'import sys; print(f"{sys.version_info.major}.{sys.version_info.minor}")')"
-# auto determine the constraint url
-CONSTRAINT_URL="https://raw.githubusercontent.com/apache/airflow/constraints-${AIRFLOW_VERSION}/constraints-${PYTHON_VERSION}.txt"
-
-# For example: https://raw.githubusercontent.com/apache/airflow/constraints-2.9.2/constraints-no-providers-3.8.txt
-pip install "apache-airflow==${AIRFLOW_VERSION}" --constraint "${CONSTRAINT_URL}"
-```
+Check the installation doc here: https://github.com/pengfei99/WorkflowPlayGround/tree/main/airflow/docs
