--- a/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
+++ b/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
@@ -78,6 +78,28 @@ Flush privileges;
 QUIT
 ```
 
+### Allow remote access
+By default, the mysql server only binds on localhost, if you want to all remote access, you need to edit
+`/etc/mysql/mysql.conf.d/mysqld.cnf`
+
+Add the following line or change it if exits:
+```shell
+bind-address = 0.0.0.0
+
+# change user account name from localhost to wildcard
+RENAME USER 'user_name'@'localhost' TO 'user_name'@'%';
+
+# grant privilege to new user account with wildcard
+grant all privileges on <db_name>.* TO 'user_name'@'%';
+
+# update the acl
+Flush privileges;
+
+# exit the server
+QUIT
+```
+
+> You also need to change the acl in mysql, localhost can be replaced by a remote ip address or `%` (wildcard for any ip)
 ## Step3: Install the elasticsearch (version 8.x)
 
 The official elastic install doc is [here](https://www.elastic.co/guide/en/elasticsearch/reference/current/install-elasticsearch.html)
@@ -225,7 +247,7 @@ xpack.security.http.ssl.enabled: false
 sudo systemctl restart elasticsearch
 
 # test it with http
-curl -u elastic:$ELASTIC_PASSWORD http://localhost:9200 
+curl -u elastic:$ELASTIC_PASSWORD http://localhost:9200
 ```
 
 ## 4. Install airflow
