--- a/OpenMetadata/Deplyement/bare_metal/02.Install_openmeta.md
+++ b/OpenMetadata/Deplyement/bare_metal/02.Install_openmeta.md
@@ -23,24 +23,51 @@ All the conf file is located at the `conf` folder
 
 ## 2. Configure the openmeta app
 
+The main configuration file for openmeta is found under `path/to/openmetadata/conf/openmetadata.yaml` 
+
+You can also notice that, the yaml file is a template which takes the env var value first, if not defined, it takes
+a default value in the template. 
+
 ### 2.1 DB config
+
+For example, you can use the below env var to override the default value in the yaml config template
 
 ```shell
 export DB_DRIVER_CLASS=com.mysql.cj.jdbc.Driver
-export DB_USER=
-export DB_USER_PASSWORD=
-export DB_HOST
-export DB_PORT
-export OM_DATABASE
+export DB_USER=openmeta
+export DB_USER_PASSWORD=changeMe
+export DB_HOST=localhost
+export DB_PORT=3306
+export OM_DATABASE=openmeta
 ```
 
 ### 2.2 Search engine config
 
 ```shell
 export SEARCH_TYPE=elasticsearch
-export ELASTICSEARCH_HOST=
-ELASTICSEARCH_PORT=
-ELASTICSEARCH_SCHEME=http
-ELASTICSEARCH_USER=
-ELASTICSEARCH_PASSWORD=
+export ELASTICSEARCH_HOST=localhost
+export ELASTICSEARCH_PORT=9200
+export ELASTICSEARCH_SCHEME=http
+export ELASTICSEARCH_USER=elastic
+export ELASTICSEARCH_PASSWORD=changeMe
+```
+
+### 2.3 Configure airflow
+
+
+#### 2.3.2 Use the provided docker compose file 
+ ingestion docker compose file
+
+```shell
+export AIRFLOW_DB_HOST=172.17.0.1
+export AIRFLOW_DB_PORT=3306
+export AIRFLOW_DB=airflow
+export AIRFLOW_DB_SCHEME=mysql+pymysql
+export AIRFLOW_DB_USER=airflow
+export AIRFLOW_DB_PASSWORD=changeMe
+
+```
+
+```shell
+curl http://localhost:8585 
 ```
