add doc to openmeta

--- a/OpenMetadata/Deplyement/bare_metal/02.Install_openmeta.md
+++ b/OpenMetadata/Deplyement/bare_metal/02.Install_openmeta.md
@@ -26,7 +26,10 @@ All the conf file is located at the `conf` folder
 The main configuration file for openmeta is found under `path/to/openmetadata/conf/openmetadata.yaml` 
 
 You can also notice that, the yaml file is a template which takes the env var value first, if not defined, it takes
-a default value in the template. 
+a `default value in the template`. 
+
+> I recommend you to replace the default value in the template by your prod deployment value. If your want to overload
+> these values, just use the export env var.
 
 ### 2.1 DB config
 
