--- a/OpenMetadata/security/01.Enable_security.md
+++ b/OpenMetadata/security/01.Enable_security.md
@@ -169,4 +169,5 @@ Below is an example of the workflow config
 
 ```
 
-You need to replace the old token with the new token.
+You need to replace the old token by the new token. The airflow scheduler will reload the dag. You don't need to do anything.
+
