--- a/OpenMetadata/security/01.Enable_security.md
+++ b/OpenMetadata/security/01.Enable_security.md
@@ -31,6 +31,19 @@ As the generated key pair are located at the host filesystem, we need to mount t
 extraction of the `docker-compose-postgres.yml`, in service `openmetadata-server`, we added a read only volume which
 maps the host file system folder that contains the key pair.
 
+```shell
+# create a folder to host pki key pair
+cd path/to/om_root_folder
+
+mkdir -p docker-volume/jwtkeys
+mv path/to/public_key.der docker-volume/jwtkeys
+mv path/to/private_key.der docker-volume/jwtkeys
+```
+> you don't need to create the docker-volume folder where we suggest. 
+
+After you create the docker volume, you need to mount the volume in the docker compose service. Below is an example,
+as you can notice we use relative path, so where your run the docker compose command matters
+ 
 ```yaml
 
 openmetadata-server:
