--- a/OpenMetadata/Deplyement/docker_compose/02.Backup_and_restore.md
+++ b/OpenMetadata/Deplyement/docker_compose/02.Backup_and_restore.md
@@ -101,19 +101,35 @@ sudo docker cp openmetadata_postgresql:/tmp/{om_backup_file_path.sql} /host/path
 
 ## 4. Restore a postgres db with the backup file
 
-If you are using the docker compose, once the `openmetadata_mysql` container is created, you only need to copy the backup
-file to the container and run the `mysql` command to ingest the backup file into the database.
+If you are using the docker compose, once the `openmetadata_postgresql` container is created, you only need to copy the backup
+file to the container and run the `psql` command to ingest the backup file into the database.
 
 ```shell
 # to copy the backup file to container
-sudo docker cp /host/path/{om_backup_file_path.sql} openmetadata_mysql:/tmp/{om_backup_file_path.sql}
+sudo docker cp /host/path/{om_backup_file_path.sql} openmetadata_postgresql:/tmp/{om_backup_file_path.sql}
 
-# get a bash shell of the container openmetadata_mysql as root user
-sudo docker exec -it -u root openmetadata_mysql /bin/bash
+# get a bash shell of the container openmetadata_postgresql as root user
+sudo docker exec -it -u root openmetadata_postgresql /bin/bash
+
 # replace it with your real backup file path
 BACKUP_FILE="/tmp/{om_backup_file_path.sql}"
 
-# run the mysql command
-mysql -u openmetadata_user -p -h localhost -P 3306 openmetadata_db < $BACKUP_FILE
+# run the psql command to import the backup file
+psql -U openmetadata_user -h localhost -d openmetadata_db < $BACKUP_FILE
 
+```
+
+If you are on bare_metal deployment, you need to install the mysql server and create the db instance inside the server
+
+```shell
+# with below command, you don't need to login to the postgres server    
+psql -U postgres -c "create database openmetadata_db;"
+psql -U postgres -c "ALTER DATABASE openmetadata_db OWNER to openmetadata_user;"
+
+
+# replace it with your real backup file path
+BACKUP_FILE="/tmp/{om_backup_file_path.sql}"
+
+# run the psql command to import the backup file
+psql -U openmetadata_user -h localhost -d openmetadata_db < $BACKUP_FILE
 ```
