--- a/OpenMetadata/Deplyement/docker_compose/03.Upgrade_openmeta.md
+++ b/OpenMetadata/Deplyement/docker_compose/03.Upgrade_openmeta.md
@@ -4,12 +4,23 @@ You can get the latest release from [here](https://github.com/open-metadata/Open
 
 ## Stop current service and backup the data
 
-All OM metadata is stored inside a database(e.g. mysql or postgres).
-
+All OM metadata is stored inside a database(e.g. mysql or postgres). And they follow a certain version of a data model
+which depends on the OM server version.
 The data model(table names, schemas,...) is managed using [Flyway migrations](https://flywaydb.org/).
 The structure of this data model can change. This means that the shape of the database is tightly coupled to your OpenMetadata Server version.
+
 If a database migration is needed to upgrade the `OpenMetadata app`, you should find the migration scripts which handles
 the migration [here](https://github.com/open-metadata/OpenMetadata/tree/main/bootstrap/sql).
+
+Before you stop the current service, do a backup of the current database. For production environment, you can follow the
+[Backup_and_restore.md](./02.Backup_and_restore.md). For dev environment you can just create a new database `backup` in
+the current database container. If the migration failed and the database is currupted, you can role back with the old
+docker compose file and the `backup` db.
+
+```shell
+export OM_DATABASE=backup
+docker compose -f $OLD_DOCKER_COMPOSE_FILE up -d
+```
 
 ## Clean the existing deployment
 
