--- a/OpenMetadata/Deplyement/docker_compose/03.Upgrade_openmeta.md
+++ b/OpenMetadata/Deplyement/docker_compose/03.Upgrade_openmeta.md
@@ -1,8 +1,9 @@
 # Upgrade openmetadata to latest version
 
-You can get the latest release from [here](https://github.com/open-metadata/OpenMetadata/releases)
+You can get the latest release from [here](https://github.com/open-metadata/OpenMetadata/releases). The upgrade 
+process is a little different. In this tutorial, we only focus on the docker compose deployment upgrade.
 
-## Stop current service and backup the data
+## 1. Backup the data
 
 All OM metadata is stored inside a database(e.g. mysql or postgres). And they follow a certain version of a data model
 which depends on the OM server version.
@@ -14,19 +15,139 @@ the migration [here](https://github.com/open-metadata/OpenMetadata/tree/main/boo
 
 Before you stop the current service, do a backup of the current database. For production environment, you can follow the
 [Backup_and_restore.md](./02.Backup_and_restore.md). For dev environment you can just create a new database `backup` in
-the current database container. If the migration failed and the database is currupted, you can role back with the old
+the current database container. 
+
+## 2. Restore the data in case of error
+
+If the migration failed and the database is corrupted, you can roll back with the old
 docker compose file and the `backup` db.
 
 ```shell
+# stop and remove all related docker volume
+# --rmi all Remove all images
+# -v Remove the named volumes declared in the volumes section of docker-compose.yml and the anonymous volumes attached to the container
+# --remove-orphans Remove containers not defined in docker-compose.yml
+docker-compose -f $NEW_DOCKER_COMPOSE_FILE down --rmi all -v --remove-orphans
+
+# Use the backup database and old docker compose file to start the server 
 export OM_DATABASE=backup
 docker compose -f $OLD_DOCKER_COMPOSE_FILE up -d
 ```
 
-## Clean the existing deployment
+
+## 3. Stop the current service and migrate
+
+Normally for each new major release, a page like this https://docs.open-metadata.org/v1.4.x/deployment/upgrade/docker
+will be published. We can follow it to do the migration. In below, we just explain a little what happens behind the
+scene and how to do it in a real world scenario.
+
+We have been explaining how each OpenMetadata Server relies on a specific data model to store the metadata. 
+What happens when we upgrade OM from version X to Y? The migration process will take care of getting the data 
+shaped as X and transform it to the Y shape. After the migration is done, the server in version Y will be able 
+to run properly.
+
+Step 1. Stop the docker compose deployment
 
 ```shell
-# --rmi all Remove all images
-# -v Remove the named volumes declared in the volumes section of docker-compose.yml and the anonymous volumes attached to the container
-# --remove-orphans Remove containers not defined in docker-compose.yml
-docker-compose -f docker-compose.yml down --rmi all -v --remove-orphans
+docker compose -f $OLD_DOCKER_COMPOSE_FILE down
 ```
+
+
+Step 2. Download the Docker Compose Service File from OpenMetadata GitHub Release page [here](https://github.com/open-metadata/OpenMetadata/releases/latest)
+
+Step 3. Start the Docker Compose Service with the new downloaded file
+
+```shell
+sudo docker compose -f docker-compose-postgres.yml --env-file custom-conf.env up -d
+```
+
+Step4. Run the migration script on the database server
+
+### 3.1 Give more resource to database server
+
+Before running the migrations, it is important to update these parameters:
+- **sort_buffer_size (MySQL)**
+- **work_mem (Postgres)**
+
+to ensure there are no runtime errors. A safe value would be setting them to 20MB.
+
+#### For Mysql
+
+You can update it via SQL (note that it will reset after the server restarts):
+
+```shell
+SET GLOBAL sort_buffer_size = 20971520
+```
+
+To make the configuration persistent, you'd need to navigate to your MySQL Server install directory and 
+update the `my.ini or my.cnf` files with `sort_buffer_size = 20971520`.
+
+> If using Amazon RDS(Relational Data Base), you will need to update your instance's Parameter 
+> Group to include the above change.
+
+#### For Postgres
+
+You can update it via SQL (not that it will reset after the server restarts):
+
+```shell
+SET work_mem = '20MB';
+```
+To make the configuration persistent, you'll need to update the `postgresql.conf` file with `work_mem = 20MB`.
+
+
+> Note that this value would depend on the size of your query_entity table. If you still see `Out of Sort Memory Errors` 
+> during the migration after bumping this value, you can increase them further. 
+> After the migration is finished, you can revert this changes.
+
+### 3.2 Migrate the database
+
+`OM` provides a script called `openmetadata-ops`, which is designed to `manage and migrate databases` and 
+`search indexes`, `reindex existing data into Elastic Search` or OpenSearch, and `redeploy service pipelines`.
+
+You can find the source in github page https://github.com/open-metadata/OpenMetadata/blob/afec7703cca13019298173792452197b1f945711/bootstrap/openmetadata-ops.sh
+
+If you are using docker compose, you can find it in the `openmetadata_server` container
+
+```shell
+# You should find the script with the below command
+ls /opt/openmetadata/bootstrap
+```
+
+To run this script, you can use the below command.
+```shell
+# the general form is shown below
+sh openmetadata-ops.sh [-dhV] [COMMAND]
+
+# to migrate the db from old version to new version
+./bootstrap/openmetadata-ops.sh migrate
+
+# check if everything is ok after migration
+./bootstrap/openmetadata-ops.sh validate
+```
+
+> You must run the `openmetadata-ops.sh` script from the `/opt/openmetadata`, otherwise the relative path inside the
+> script won't work.
+
+The option are:
+ - **-c, --config=<configFilePath>**: give a custom config file to the script
+ - **-d, --debug**: run the script on mode debug
+ - **-h, --help**: Show this help message and exit.
+ - **-V, --version**: Print version information and exit.
+
+The command are: 
+
+- **analyze-tables**: Migrates secrets from the database to the configured Secrets Manager. 
+                      Note that this command does not support migrating between external Secrets Managers.
+
+- **changelog**: Prints the change log of database migration.
+
+- **check-connection**: Checks if a connection can be successfully obtained for the target database.
+
+- **deploy-pipelines**: Deploys all the service pipelines.
+- **drop-create**: Deletes any tables in the configured database and creates new tables based on the current version of OpenMetadata. This command also re-creates the search indexes.
+- **info**: Shows the list of migrations applied and the pending migrations waiting to be applied on the target database.
+- **migrate**: Migrates the OpenMetadata database schema and search index mappings.
+- **migrate-secrets**: Migrates secrets from the database to the configured Secrets Manager. Note that this command does not support migrating between external Secrets Managers.
+- **reindex**: Reindexes data into the search engine from the command line.
+- **repair**: Repairs the DATABASE_CHANGE_LOG table, which is used to track all the migrations on the target database. This involves removing entries for the failed migrations and updating the checksum of migrations already applied on the target database.
+- **validate**: Checks if all the migrations have been applied on the target database.
