--- a/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
+++ b/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
@@ -1,21 +1,37 @@
 # Install openmeta data on bare metal
 
-This tutorial is tested on `debian 11`.
+This tutorial is tested on `debian 11` with OM `v1.9.x`.
 
-## Step1: Install java (version 17 or higher)
+## Step1: Install java (version 21 or higher)
 
 OpenMetadata is built using `Java, DropWizard, and Jetty`.
 
 Type the following command to verify that you have a supported version of the Java runtime installed.
 
+Install openjdk 21, you can change the url for another version of jdk. Please visit this [site](https://jdk.java.net/) for more info
+
+```shell
+wget https://download.java.net/java/GA/jdk21.0.2/f2283984656d49d69e91c558476027ac/13/GPL/openjdk-21.0.2_linux-x64_bin.tar.gz
+
+tar -xzvf openjdk-21.0.2_linux-x64_bin.tar.gz
+
+sudo mkdir /opt/java
+
+sudo mv jdk-21.0.2 /opt/java
+
+sudo vim /etc/profile.d/java.sh
+# add the below lines
+export JAVA_HOME=/opt/java/jdk-21.0.2
+export PATH=$PATH:$JAVA_HOME/bin
+
+source /etc/profile.d/java.sh
+```
+Now you can check if the 
 ```shell
 java --version
 
-# if you don't have java 17 or higher, run the following steps
-sudo apt-cache search openjdk | grep 17
-
-# if you have openjdk 17 on the output list, you can run the below command
-sudo apt install openjdk-17-jdk
+# echo the JAVA_HOME
+echo $JAVA_HOME
 ```
 
 ## Step2: Install mysql (8.0 or higher)
