--- a/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
+++ b/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
@@ -34,88 +34,85 @@ java --version
 echo $JAVA_HOME
 ```
 
-## Step2: Install mysql (8.0 or higher)
+## Step2: Install postgresql
 
-The official installation doc is [here](https://dev.mysql.com/doc/mysql-installation-excerpt/8.0/en/linux-installation.html)
+The official installation doc is [here](https://www.postgresql.org/download/linux/debian/)
 
 ```shell
-# get the deb file
-wget https://dev.mysql.com/get/mysql-apt-config_0.8.30-1_all.deb
+# as the default version is too old, we add the official repo manually to the apt
+# Import the repository signing key:
+sudo apt install curl ca-certificates
+sudo install -d /usr/share/postgresql-common/pgdg
+sudo curl -o /usr/share/postgresql-common/pgdg/apt.postgresql.org.asc --fail https://www.postgresql.org/media/keys/ACCC4CF8.asc
 
-# install it via dpkg
-sudo dpkg -i mysql-apt-config_0.8.30-1_all.deb
+# Create the repository configuration file:
+# . is a shortcut for source
+. /etc/os-release
+sudo sh -c "echo 'deb [signed-by=/usr/share/postgresql-common/pgdg/apt.postgresql.org.asc] https://apt.postgresql.org/pub/repos/apt $VERSION_CODENAME-pgdg main' > /etc/apt/sources.list.d/pgdg.list"
 
-# this deb file will change your source list, to debian will no longer install mariadb if you type `sudo apt install mysql-server`
+# Update the package lists:
+sudo apt update
 
-# If you see an error `Cannot set LC_ALL to default locale: No such file or directory`
-# run the below command, then rerun the dpkg -i command
-export LC_ALL="en_US.UTF-8"
+# Install the latest version of PostgreSQL:
+# If you want a specific version, use 'postgresql-17' or similar instead of 'postgresql'
+sudo apt -y install postgresql
 
-# update your apt repo
-sudo apt-get update
+# install the postgresql cli
+sudo apt -y install postgresql-client
 
-# install the mysql server
-sudo apt-get install mysql-server
+# start the service
+sudo systemctl start postgresql
+sudo systemctl enable postgresql
 
-# a prompt will ask you to enter the root password, enter the casd2024
-
-# check the installed server version
-apt policy mysql-server
-mysql-server:
-  Installed: 8.4.0-1debian11
-  Candidate: 8.4.0-1debian11
-  Version table:
- *** 8.4.0-1debian11 500
-        500 http://repo.mysql.com/apt/debian bullseye/mysql-8.4-lts amd64 Packages
-        100 /var/lib/dpkg/status
-
-# check the status
-sudo systemctl status mysql
-
-# connect to mysql server 
-mysql -u root -p
-
-# test the version
-Select VERSION();
-
-# create DB,
-CREATE DATABASE <db_name>;
-
-# create User 
-create user 'user_name'@'localhost' indentified by "user_password";
-
-# grant user access to the db
-grant all privileges on <db_name>.* TO 'user_name'@'localhost';
-
-# update the acl
-Flush privileges;
-
-# exit the server
-QUIT
+# check the installed version
+sudo -u postgres psql -c "SELECT version();"
 ```
 
-### Allow remote access
-By default, the mysql server only binds on localhost, if you want to all remote access, you need to edit
-`/etc/mysql/mysql.conf.d/mysqld.cnf`
+### 2.1 Change default password of postgres
 
-Add the following line or change it if exits:
 ```shell
-bind-address = 0.0.0.0
-
-# change user account name from localhost to wildcard
-RENAME USER 'user_name'@'localhost' TO 'user_name'@'%';
-
-# grant privilege to new user account with wildcard
-grant all privileges on <db_name>.* TO 'user_name'@'%';
-
-# update the acl
-Flush privileges;
-
-# exit the server
-QUIT
+# open a postgres shell with uid postgres
+sudo -u postgres psql
+# in the postgres shell run the below command
+ALTER USER postgres PASSWORD 'YourPassword';
+# exit
+QUIT;
 ```
 
-> You also need to change the acl in mysql, localhost can be replaced by a remote ip address or `%` (wildcard for any ip)
+### 2.2 Change listening port
+
+```shell
+sudo vim /etc/postgresql/17/main/postgresql.conf
+
+# activate this line
+listen_addresses = '*' 
+```
+
+### 2.3. Change ACL
+
+```shell
+# open the acl config file
+sudo vim /etc/postgresql/17/main/pg_hba.conf
+
+# add below line to allow remote connection via password
+host    all             all             0.0.0.0/0            md5
+```
+
+> You need to restart the postgres server `sudo systemctl restart postgresql` to apply change 
+> 
+> 
+### 2.4 configure postgres for OM
+You need to run the below sql script 
+```sql
+CREATE DATABASE openmetadata_db;
+CREATE DATABASE airflow_db;
+CREATE USER openmetadata_user WITH PASSWORD 'openmetadata_password';
+CREATE USER airflow_user WITH PASSWORD 'airflow_pass';
+ALTER DATABASE openmetadata_db OWNER TO openmetadata_user;
+ALTER DATABASE airflow_db OWNER TO airflow_user;
+ALTER USER airflow_user SET search_path = public;
+commit;
+```
 ## Step3: Install the elasticsearch (version 8.x)
 
 The official elastic install doc is [here](https://www.elastic.co/guide/en/elasticsearch/reference/current/install-elasticsearch.html)
