--- a/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
+++ b/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
@@ -102,7 +102,9 @@ host    all             all             0.0.0.0/0            md5
 > 
 > 
 ### 2.4 configure postgres for OM
+
 You need to run the below sql script 
+
 ```sql
 CREATE DATABASE openmetadata_db;
 CREATE DATABASE airflow_db;
@@ -113,6 +115,27 @@ ALTER DATABASE airflow_db OWNER TO airflow_user;
 ALTER USER airflow_user SET search_path = public;
 commit;
 ```
+
+I recommend you creat a file `db_init.sql`, and put the above content in it. Don't forget to change the password
+
+```shell
+# open a postgres shell with uid postgres
+sudo -u postgres psql
+
+# run the sql file
+\i /path/to/db_init.sql
+
+# to check the database
+\l
+
+# check user account(roles)
+\du+
+
+# try to connect to a db with user account
+psql -U openmetadata_user -h localhost openmetadata_db
+```
+> You should be able to connect to the created db with the created roles
+> 
 ## Step3: Install the elasticsearch (version 8.x)
 
 The official elastic install doc is [here](https://www.elastic.co/guide/en/elasticsearch/reference/current/install-elasticsearch.html)
@@ -164,6 +187,7 @@ You may need the sudo right to access the certificate `/etc/elasticsearch/certs/
 
 ```shell
 export ELASTIC_PASSWORD="your_password" 
+
 sudo curl --cacert /etc/elasticsearch/certs/http_ca.crt -u elastic:$ELASTIC_PASSWORD https://localhost:9200 
 
 # You should see the below ouput
@@ -266,3 +290,17 @@ curl -u elastic:$ELASTIC_PASSWORD http://localhost:9200
 ## 4. Install airflow
 
 Check the installation doc here: https://github.com/pengfei99/WorkflowPlayGround/tree/main/airflow/docs
+
+
+## 5. Install OM
+
+### 5.1 Configure OM
+
+The main config file `openmetadata.yaml` is located at `/path/to/openmetadata-1.x.x/conf`. In this tutorial, we download
+the versio 1.9.0. So the below config example works for v1.9.0.
+
+The minimum config is to connect om to the target `DB` and `EL`.
+
+```shell
+
+```
