--- a/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
+++ b/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
@@ -38,6 +38,8 @@ echo $JAVA_HOME
 
 The official installation doc is [here](https://www.postgresql.org/download/linux/debian/)
 
+OM only support postgres 15, so don't install a newer version
+
 ```shell
 # as the default version is too old, we add the official repo manually to the apt
 # Import the repository signing key:
@@ -55,7 +57,7 @@ sudo apt update
 
 # Install the latest version of PostgreSQL:
 # If you want a specific version, use 'postgresql-17' or similar instead of 'postgresql'
-sudo apt -y install postgresql
+sudo apt -y install postgresql-15
 
 # install the postgresql cli
 sudo apt -y install postgresql-client
@@ -67,6 +69,7 @@ sudo systemctl enable postgresql
 # check the installed version
 sudo -u postgres psql -c "SELECT version();"
 ```
+
 
 ### 2.1 Change default password of postgres
 
