--- a/OpenMetadata/Deplyement/bare_metal/02.Install_openmeta.md
+++ b/OpenMetadata/Deplyement/bare_metal/02.Install_openmeta.md
@@ -1,13 +1,19 @@
 # Install and configure open metadata
 
+## 5. Install OM
+
+
+
+
+
 ## 1. Download the distribution
 
-You can get the latest release from the github repo: https://github.com/open-metadata/OpenMetadata/releases/latest
+You can get the latest release from the GitHub repo: https://github.com/open-metadata/OpenMetadata/releases/latest
 
-At the time, the latest release is 1.4.1. So we run the below command to get the tar ball
+At the time(19/08/25), the latest release is 1.9.x. So we run the below command to get the tar ball
 
 ```shell
-wget https://github.com/open-metadata/OpenMetadata/releases/download/1.4.1-release/openmetadata-1.4.1.tar.gz
+wget https://github.com/open-metadata/OpenMetadata/releases/download/1.9.0-release/openmetadata-1.9.0.tar.gz
 
 mkdir -p /opt/openmeta
 mv openmetadata-1.4.1.tar.gz /opt/openmeta/
@@ -28,8 +34,12 @@ The main configuration file for openmeta is found under `path/to/openmetadata/co
 You can also notice that, the yaml file is a template which takes the env var value first, if not defined, it takes
 a `default value in the template`. 
 
-> I recommend you to replace the default value in the template by your prod deployment value. If your want to overload
+> I recommend you to replace the default value in the template by your prod deployment value. If you want to overload
 > these values, just use the export env var.
+> 
+
+The minimum config is to connect the `om` to the target `DB` and `EL`.
+
 
 ### 2.1 DB config
 
@@ -58,8 +68,9 @@ export ELASTICSEARCH_PASSWORD=changeMe
 ### 2.3 Configure airflow
 
 
-#### 2.3.2 Use the provided docker compose file 
- ingestion docker compose file
+#### 2.3.2 Uses the provided docker compose file 
+
+Ingestion docker compose file
 
 ```shell
 export AIRFLOW_DB_HOST=172.17.0.1
@@ -68,7 +79,6 @@ export AIRFLOW_DB=airflow
 export AIRFLOW_DB_SCHEME=mysql+pymysql
 export AIRFLOW_DB_USER=airflow
 export AIRFLOW_DB_PASSWORD=changeMe
-
 ```
 
 ```shell
