--- a/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
+++ b/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
@@ -38,7 +38,7 @@ echo $JAVA_HOME
 
 The official installation doc is [here](https://www.postgresql.org/download/linux/debian/)
 
-OM only support postgres 15, so don't install a newer version
+**OM v1.9.x only supports postgres 15, so don't install a newer version**
 
 ```shell
 # as the default version is too old, we add the official repo manually to the apt
