--- a/OpenMetadata/Deplyement/bare_metal/02.Install_openmeta.md
+++ b/OpenMetadata/Deplyement/bare_metal/02.Install_openmeta.md
@@ -1,9 +1,5 @@
 # Install and configure open metadata
 
-## 5. Install OM
-
-
-
 
 
 ## 1. Download the distribution
@@ -84,3 +80,13 @@ export AIRFLOW_DB_PASSWORD=changeMe
 ```shell
 curl http://localhost:8585 
 ```
+
+## 3. Init the databases and indexes
+
+The command below will generate all the necessary tables and indexes in ElasticSearch.
+
+```shell
+./bootstrap/openmetadata-ops.sh drop-create
+```
+> Before running this command, make sure you have the required config setup in the `openmetadata.yaml`(e.g. login, pwd for elastic and postgresql/mysql).
+> Otherwise, you will receive many error messages.
