--- a/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
+++ b/OpenMetadata/Deplyement/bare_metal/01.Install_required_modules.md
@@ -295,3 +295,31 @@ curl -u elastic:$ELASTIC_PASSWORD http://localhost:9200
 Check the installation doc here: https://github.com/pengfei99/WorkflowPlayGround/tree/main/airflow/docs
 
 
+## Appendix
+
+### Remove postgresql
+
+if you have used the apt and postgresql apt repo to install the postgresql server, you can use the below commands to
+uninstall it.
+
+```shell
+sudo apt-get remove --purge postgresql-17 postgresql-client-17 postgresql-contrib-17
+sudo apt-get autoremove --purge
+sudo apt-get autoclean
+
+# check if the psql client is removed
+psql --version
+
+# check if there are still postgresql packages
+dpkg -l | grep postgresql
+```
+
+### Migrate data between postgres servers
+
+```shell
+# dump all the data into one file
+pg_dumpall -U postgres -f /tmp/db_backup.sql
+
+# import data into another postgresql server
+psql -U postgres -f /tmp/db_backup.sql
+```
