--- a/OpenMetadata/Deplyement/bare_metal/02.Install_openmeta.md
+++ b/OpenMetadata/Deplyement/bare_metal/02.Install_openmeta.md
@@ -90,3 +90,12 @@ The command below will generate all the necessary tables and indexes in ElasticS
 ```
 > Before running this command, make sure you have the required config setup in the `openmetadata.yaml`(e.g. login, pwd for elastic and postgresql/mysql).
 > Otherwise, you will receive many error messages.
+> 
+> 
+## 4. Run the openmetadata service
+
+```shell
+./bin/openmetadata.sh start
+```
+
+> We recommend configuring serviced to monitor the OpenMetadata command to restart in case of any failures.
